<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/where_to_go" />

    <item
        android:id="@+id/nav_navigation"
        android:icon="@drawable/ic_navigation"
        android:title="Navigation" />

    <item
        android:id="@+id/nav_favorites"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorite_routes" />

    <item
        android:id="@+id/nav_services"
        android:icon="@drawable/ic_services"
        android:title="@string/nearby_services" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings" />
</menu>
